@@ -1416,5 +1416,33 @@ mlib checken, obs ggf. zu functions zusätzlich makros geben sollte
 
 jeweils "since" in mlib anführen
 
+
+
+siehe https://github.com/ruricolist/serapeum/blob/master/REFERENCE.md#plist-keys-plist
+
 (doplist (k v plist)
   forms...)
+
+(serapeum:plist-keys '(:a 1 :b 2))
+;; (:A :B)
+
+(defun plist-keys (plist)
+;  "Return the keys of a plist."
+  (collecting
+    (doplist (k v plist)
+      (collect k))))
+
+auch: plist-values
+
+
+inspired by serapeum:
+(defmacro summing (startval . body)
+...
+
+expandiert irgendwie in eine labels-form (und eine let-form für accumulator, oder let* für beides), die hat sum als lokale funktion und sum summiert das argument auf
+im body kann man sum aufrufen
+nach body gibts "return summe"
+
+passt wsl für vieles, nicht nur summieren. vielleicht ein metamakro, und den akkumulator (ein closure) und akkumulatorname als makro-parameter?
+-> kann man das primesieve damit abbilden?
+-> siehe auch serapeum with-collector und collecting
